# streamline_puller

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.example.json  occupancies.csv  pyproject.toml  requirements.txt
script_name/: main.py
scripts/: deploy  read  spec
streamline_puller/: __init__.py  config.py  main.py  occupancies.csv  streamline.py  streamline_v1.py  streamline_v2.py
